k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goat-monitor
spec:
  selector:
    app: goat-monitor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
